Fix select on iOS and improve spacing

--- a/src/ui/components/form/form.scss
+++ b/src/ui/components/form/form.scss
@@ -104,7 +104,8 @@ $control-border-radius: 0.3em;
 .ln-btn {
     color: $lnx-primary-text-color;
     display: inline-block;
-    line-height: 1em;
+    line-height: 1;
+    height: 100%;
     font-size: 1em;
     padding: golden_ratio(1, em);
     background-color: change-color(purple, $saturation: 20%, $lightness: 40%);
@@ -151,19 +152,28 @@ $control-border-radius: 0.3em;
 .ln-form-select-wrapper {
     margin: 0 auto;
     width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     position: relative;
-    margin-right: 1em;
+
+    .ln-form-group & {
+        margin-right: 1em;
+
+        &:last-child {
+            margin-right: 0;
+        }
+    }
 }
 
 select.ln-form-select {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    border: 1px solid transparent;
+    border: 1px solid #111;
     width: 100%;
-    padding: golden_ratio(0.35, em);
+    height: 100%;
+    padding: golden_ratio(0.8, em);
     padding-right: 3em;
     background: $lnx-tertiary-surface-color;
     color: $lnx-primary-text-color;
@@ -195,7 +205,7 @@ $ptr-size: 0.4em;
 .ln-form-select-arrow {
     display: block;
     background: $lnx-primary-surface-color;
-    border: 1px solid $lnx-primary-surface-color;
+    border: 1px solid #111;
     border-left: none;
     position: absolute;
     height: 100%;
